--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Research-mathematician-about-contact - Ilaria Viglino</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,7 +15,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styleabout.css" />
+    <link rel="stylesheet" href="css/styleabout.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top mb-5">
@@ -57,22 +57,22 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-sm-4">
-          <img
+          <img alt="weather-app-screenshot"
             src="images/weather.png"
-            class="img-fluid border shadow rounded"
+            class="img-fluid border shadow rounded "
           />
         </div>
         <div class="col-sm-4">
-          <img src="images/poem.png" class="img-fluid shadow border rounded" />
+          <img alt="poem-app-screenshot" src="images/poem.png" class="img-fluid shadow border rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/clock.png" class="img-fluid shadow border rounded" />
+          <img alt="clock-app-screenshot" src="images/clock.png" class="img-fluid shadow border rounded" />
         </div>
       </div>
     </div>
     <h2 class="text-center" id="contact-me">📮Contact me</h2>
     <a
-      class="email-link d-flex justify-content-center"
+      class="email-link d-flex justify-content-center mb-5"
       href="mailto:ilaria.viglino@yahoo.it"
       >ilaria.viglino@yahoo.it</a
     >
