--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>SheCodes</title>
+    <meta name="description" content="Ilaria Viglino is a researcher in mathematics based in Europe, check out her projects and contact her">
+    <title>Research-mathematician - Ilaria Viglino</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +17,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -58,11 +59,11 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img  alt="weather-app-screenshot" src="images/weather.png" class="img-fluid rounded d-none d-sm-block" />
         </div>
         <div class="col-sm-6">
-          <h2 class="mt-0 mb-0 ms-0 text-start">Weather app</h2>
-          <p class="text-start fs-6 mb-1 ps-0">
+          <h2 class="mt-0 mb-0 ms-0 text-sm-center text-md-start">Weather app</h2>
+          <p class="text-sm-center text-md-start fs-6 mb-1 ps-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -82,8 +83,8 @@
     <div class="container text-center mt-5">
       <div class="row">
         <div class="col-sm-6">
-          <h2 class="mt-0 mb-0 ms-0 text-start">Poem generator app</h2>
-          <p class="text-start fs-6 mb-1 ps-0">
+          <h2 class="mt-0 mb-0 ms-0 text-sm-center text-md-start">Poem generator app</h2>
+          <p class="text-sm-center text-md-start fs-6 mb-1 ps-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -99,18 +100,18 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <img src="images/poem.png" class="img-fluid rounded mt-3" />
+          <img alt="poem-app-screenshot" src="images/poem.png" class="img-fluid rounded mt-3 d-none d-sm-block" />
         </div>
       </div>
     </div>
     <div class="container text-center mt-5 mb-5">
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/clock.png" class="img-fluid rounded" />
+          <img alt="clock-app-screenshot" src="images/clock.png" class="img-fluid rounded d-none d-sm-block" />
         </div>
         <div class="col-sm-6">
-          <h2 class="mt-0 mb-0 ms-0 text-start">World clock app</h2>
-          <p class="text-start fs-6 mb-1 ps-0">
+          <h2 class="mt-0 mb-0 ms-0 text-sm-center text-md-start">World clock app</h2>
+          <p class="text-sm-center text-md-start fs-6 mb-1 ps-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
